bk_ida/gccida/g2/gen_cmpstrsi
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_cmpstrsi/src/insn-emit.c:16164:26: error: use of undeclared identifier 'machine_mode'
v8 = copy_to_mode_reg( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), operand1->fld[0].rtx); 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_cmpstrsi/src/insn-emit.c:16165:26: error: use of undeclared identifier 'machine_mode'
v9 = copy_to_mode_reg( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), operand2->fld[0].rtx); 
                         ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_cmpstrsi/src/obj/insn-emit.o] Error 1
